--- a/www/templates/tab-dash.html
+++ b/www/templates/tab-dash.html
@@ -1,8 +1,6 @@
 <ion-view view-title="Dashboard">
   <ion-content class="padding">
-    <button class="button button-positive button-block" ng-click="callApi()">
-      Call API
-    </button>
+    {{message}}
   </ion-content>
 </ion-view>
 
