implement chat system and chatrooms

--- a/www/templates/location.html
+++ b/www/templates/location.html
@@ -1,5 +1,5 @@
 <ion-view view-title="Location">
     <ion-content class="padding">
-        <button class="button button-block button-calm" ng-click="getCurrentPosition()">pos</button>
+        <div>Getting gps location...</div>
     </ion-content>
 </ion-view>
