--- a/www/templates/tab-test.html
+++ b/www/templates/tab-test.html
@@ -1,13 +1,13 @@
-<ion-view view-title="Test">
+<ion-view view-title="Create chat room">
     <ion-content>
-        <div class="row">
-            <div class="col" style="font-weight: bold; font-size: 12pt;">Response:</div><br/>
-            <div class="col" style="font-size: 12pt;">{{test}}</div><br/>
-            <div class="col" style="font-size: 12pt;">{{test1}}</div><br/>
-
-            <button ng-click="posting()">
-                Post
-            </button>
+        <div class="list list-inset">
+            <label class="item item-input">
+                <input type="text" placeholder="Name" ng-model="data.roomName">
+            </label>
+            <label class="item item-input">
+                <input type="password" placeholder="Range" ng-model="data.range">
+            </label>
         </div>
+        <button class="button button-block button-calm" ng-click="create()">create</button>
     </ion-content>
 </ion-view>
