--- a/www/templates/tab-account.html
+++ b/www/templates/tab-account.html
@@ -1,39 +1,15 @@
 <ion-view view-title="Account">
     <ion-content>
 
-        <!--<img id="profile-image" src="{{picture}}" style="width:100px;height:100px;">-->
-
-        <!--<div class="row header">-->
-            <!--<div class="col">Username:</div>-->
-        <!--</div>-->
-        <!--<div class="row">-->
-            <!--<div class="col">{{username}}</div>-->
-        <!--</div>-->
-        <!--<div class="row header">-->
-            <!--<div class="col">e-mail:</div>-->
-        <!--</div>-->
-        <!--<div class="row">-->
-            <!--<div class="col">{{email}}</div>-->
-        <!--</div>-->
-        <!--<div class="row header">-->
-            <!--<div class="col">Created at:</div>-->
-        <!--</div>-->
-        <!--<div class="row">-->
-            <!--<div class="col">{{created_at | date:'EEE dd MMM yyyy'}}</div>-->
-        <!--</div>-->
-        <!--<div class="row header">-->
-            <!--<div class="col">Token:</div>-->
-        <!--</div>-->
-        <!--<div class="row">-->
-            <!--<div class="col">{{Token}}</div>-->
-        <!--</div>-->
-        <!--<div class="row header">-->
-            <!--<div class="col">refreshToken:</div>-->
-        <!--</div>-->
-        <!--<div class="row">-->
-            <!--<div class="col">{{refreshToken}}</div>-->
-        <!--</div>-->
-
+        <ul>
+            <li>{{userinfo.username}}</li>
+            <li>{{userinfo.fname}}</li>
+            <li>{{userinfo.lname}}</li>
+            <li>{{userinfo.email}}</li>
+            <li>{{userinfo.town}}</li>
+            <li>{{userinfo.role}}</li>
+            <li>{{userinfo.birthday | date:"EEE dd MMM yyyy}}</li>
+        </ul>
         <button class="button button-positive button-block" ng-click="logout()">
             Logout
         </button>
