--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -20,7 +20,7 @@ navigation history that also transitions its views in and out.
     <ion-nav-view name="tab-account"></ion-nav-view>
   </ion-tab>
 
-  <ion-tab title="Test" icon-off="ion-ios-gear-outline" icon-on="ion-ios-gear" href="#/tab/test">
+  <ion-tab title="Create" icon-off="ion-ios-gear-outline" icon-on="ion-ios-gear" href="#/tab/test">
     <ion-nav-view name="tab-test"></ion-nav-view>
   </ion-tab>
 
